--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,6 +1,6 @@
 _extends: .github
 repository:
-  name: yamlfmt
+  name: yamlformatter
   description: A simple opionated yaml formatter that keeps your comments!
   topics: yaml
   default_branch: main
