--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ authors = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
+"ruamel.yaml" = "^0.17.10"
+
+[tool.poetry.dev-dependencies]
 black = "^21.6b0"
 mypy = "^0.902"
 pylint = "^2.7.1"
-"ruamel.yaml" = "^0.17.10"
